Fixed randomization of pentominoes order. Gbot is working just fine! Qbot is not :/